--- a/CashRefill.xcodeproj/xcshareddata/xcschemes/CashRefill.xcscheme
+++ b/CashRefill.xcodeproj/xcshareddata/xcschemes/CashRefill.xcscheme
@@ -34,8 +34,7 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      language = "en"
-      region = "PL"
+      language = "pl"
       launchStyle = "0"
       useCustomWorkingDirectory = "NO"
       ignoresPersistentStateOnLaunch = "NO"
